MultiBrowsertest added.Latest Chromedriver added.

--- a/Parameter/pom.xml
+++ b/Parameter/pom.xml
@@ -31,18 +31,20 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M5</version>
 					<configuration>
-						<systemPropertyVariables>
-							<foo>bar</foo>
-							<colour>${colourName}</colour>
-							<site>${url}/</site>
-						</systemPropertyVariables>
+
+						<source>1.6</source>
+						<target>1.6</target>
+
 						<includes>
-							<include>TestNameTest.java</include>
+							<include>MultiBrowserTest.java</include>
 						</includes>
+
+						<systemPropertyVariables>
+							<browserName>chrome</browserName>
+						</systemPropertyVariables>
 					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
-
 </project>
